Fix comment addressing